--- a/src/main/resources/assets/demonic/lang/en_us.json
+++ b/src/main/resources/assets/demonic/lang/en_us.json
@@ -1,7 +1,8 @@
 {
-  "item.demonic.blood_bottle": "Blood Bottle",
   "item.demonic.blood_bottle_4": "Blood Bottle",
+  "item.demonic.blood_bottle": "Blood Bottle",
   "item.demonic.blood_bottle_5": "Blood Bottle",
+  "item.demonic.blood_ball": "Blood Ball",
   "item.demonic.blood_bottle_1": "Blood Bottle",
   "item.demonic.blood_bottle_2": "Blood Bottle",
   "block.demonic.toxic_wood": "Toxic Wood",
@@ -10,5 +11,5 @@
   "item.demonic.iron_knife": "Iron Knife",
   "item.demonic.book_1": "Book",
   "item.demonic.book": "Book",
-  "itemGroup.tabdemonic_blocks": "Demonic Blocks"
+  "itemGroup.tabdemonic_blocks": "Demonic"
 }
