--- a/src/main/resources/assets/demonic/lang/en_us.json
+++ b/src/main/resources/assets/demonic/lang/en_us.json
@@ -1,6 +1,7 @@
 {
-  "item.demonic.blood_bottle_4": "Blood Bottle",
+  "block.demonic.hot_table": "Hot Table",
   "item.demonic.blood_bottle": "Blood Bottle",
+  "item.demonic.blood_bottle_4": "Blood Bottle",
   "item.demonic.blood_bottle_5": "Blood Bottle",
   "item.demonic.blood_ball": "Blood Ball",
   "item.demonic.blood_bottle_1": "Blood Bottle",
