--- a/src/main/resources/assets/demonic/lang/en_us.json
+++ b/src/main/resources/assets/demonic/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.demonic.hot_table": "Hot Table",
+  "block.demonic.pentagram": "Pentagram",
   "item.demonic.blood_bottle": "Blood Bottle",
   "item.demonic.blood_bottle_4": "Blood Bottle",
   "item.demonic.blood_bottle_5": "Blood Bottle",
@@ -12,5 +13,7 @@
   "item.demonic.iron_knife": "Iron Knife",
   "item.demonic.book_1": "Book",
   "item.demonic.book": "Book",
-  "itemGroup.tabdemonic_blocks": "Demonic"
+  "block.demonic.blood_rose": "Blood Rose",
+  "itemGroup.tabdemonic_blocks": "Demonic",
+  "block.demonic.rose": "Rose"
 }
