--- a/src/main/resources/assets/demonic/lang/en_us.json
+++ b/src/main/resources/assets/demonic/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.demonic.otsosi_spawn_egg": "Otsosi Spawn Egg",
   "block.demonic.hot_table": "Hot Table",
   "block.demonic.pentagram": "Pentagram",
   "item.demonic.blood_bottle": "Blood Bottle",
@@ -9,6 +10,7 @@
   "item.demonic.blood_bottle_2": "Blood Bottle",
   "block.demonic.toxic_wood": "Toxic Wood",
   "item.demonic.blood_bottle_3": "Blood Bottle",
+  "entity.demonic.otsosi": "Otsosi",
   "block.demonic.torf": "Torf",
   "item.demonic.iron_knife": "Iron Knife",
   "item.demonic.book_1": "Book",
