--- a/src/main/resources/assets/demonic/lang/en_us.json
+++ b/src/main/resources/assets/demonic/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.demonic.hot_table": "Hot Table",
+  "block.demonic.pentagram": "Pentagram",
   "item.demonic.blood_bottle": "Blood Bottle",
   "item.demonic.blood_bottle_4": "Blood Bottle",
   "item.demonic.blood_bottle_5": "Blood Bottle",
@@ -10,9 +11,9 @@
   "item.demonic.blood_bottle_3": "Blood Bottle",
   "block.demonic.torf": "Torf",
   "item.demonic.iron_knife": "Iron Knife",
-  "item.demonic.book_1": "Book",
+  "item.demonic.book_1": "Book 1",
   "item.demonic.book": "Book",
   "block.demonic.blood_rose": "Blood Rose",
-  "itemGroup.tabdemonic_blocks": "Demonic",
+  "itemGroup.tabdemonic_blocks": "Demonic Blocks",
   "block.demonic.rose": "Rose"
 }
